fix: all frontend end but we need change design